[project]
name = "prom-exporter-toolkit"
version = "0.1.0"
description = "Custom Prometheus exporter for system and application metrics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "psutil>=5.9",
    "prometheus-client>=0.20",
]

[project.scripts]
prom-exporter = "exporter.server:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["exporter*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
